[package]
name = "esp32-tcp-ip-oled"
version = "0.1.0"
authors = ["Jonas Spinner"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp32-tcp-ip-oled"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false }
ssd1306 = "0.8.4"
anyhow = "1.0.86"
http = "1.1.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
embedded-svc = "0.28.0"
bitvector = "0.1.5"
embedded-graphics = "0.8.1"
rand = { version = "0.8.5", features = ["small_rng"] }
async-io = "2.3.3"
futures = "0.3.30"
shared = { path = "shared" }

[build-dependencies]
embuild = "0.32.0"
